// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderNodeTs matches the snapshot for multi-version.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-js-node v1.1.0 or later.
 */

import type { HtEvents, TrackParams } from '@ht-sdks/events-sdk-js-node';

export interface TrackOrderCompletedV1 {
    orderId?: string;
    [property: string]: unknown;
}

export interface TrackOrderCompletedV2 {
    orderId?: string;
    total?:   number;
    [property: string]: unknown;
}

export type CallOptions = {
  anonymousId?: string;
  context?: TrackParams['context'];
  timestamp?: TrackParams['timestamp'];
  integrations?: TrackParams['integrations'];
};

let analytics: HtEvents | undefined;

export function setHtEvents(instance: HtEvents): void {
  analytics = instance;
}

function requireAnalytics(): HtEvents {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  options: CallOptions | undefined,
  path: readonly string[] | undefined,
  version: string,
  envelopeKey: "properties" | "traits",
): { data: T; options: CallOptions | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, options };
  }
  const [head, ...rest] = path;
  if (head === envelopeKey) {
    return {
      data: setAtPath(data, rest, version) as T,
      options,
    };
  }
  if (head === "context") {
    const contextRoot =
      options?.context !== null &&
      typeof options?.context === "object" &&
      !Array.isArray(options.context)
        ? (options.context as Record<string, unknown>)
        : {};
    return {
      data,
      options: {
        ...options,
        context: setAtPath(contextRoot, rest, version),
      },
    };
  }
  return { data, options };
}

function compactOptions(
  options: CallOptions | undefined,
): CallOptions {
  if (options === undefined) {
    return {};
  }
  const out: CallOptions = {};
  if (options.anonymousId !== undefined) {
    out.anonymousId = options.anonymousId;
  }
  if (options.context !== undefined) {
    out.context = options.context;
  }
  if (options.timestamp !== undefined) {
    out.timestamp = options.timestamp;
  }
  if (options.integrations !== undefined) {
    out.integrations = options.integrations;
  }
  return out;
}

export function trackOrderCompletedV1(
  userId: string | undefined,
  properties: TrackOrderCompletedV1,
  options?: CallOptions,
): void {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    undefined,
    "v1",
    "properties",
  );
  htevents.track({
    event: "Order Completed",
    ...(userId === undefined ? {} : { userId }),
    properties: injected.data,
    ...compactOptions(injected.options),
  } as Parameters<HtEvents['track']>[0]);
}

export function trackOrderCompletedV2(
  userId: string | undefined,
  properties: TrackOrderCompletedV2,
  options?: CallOptions,
): void {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    undefined,
    "v2",
    "properties",
  );
  htevents.track({
    event: "Order Completed",
    ...(userId === undefined ? {} : { userId }),
    properties: injected.data,
    ...compactOptions(injected.options),
  } as Parameters<HtEvents['track']>[0]);
}

export const trackOrderCompleted = trackOrderCompletedV2;
"
`;

exports[`renderNodeTs matches the snapshot for simple-track.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-js-node v1.1.0 or later.
 */

import type { HtEvents, TrackParams } from '@ht-sdks/events-sdk-js-node';

export interface TrackOrderCompletedDefault {
    orderId: string;
    total?:  number;
    [property: string]: unknown;
}

export type CallOptions = {
  anonymousId?: string;
  context?: TrackParams['context'];
  timestamp?: TrackParams['timestamp'];
  integrations?: TrackParams['integrations'];
};

let analytics: HtEvents | undefined;

export function setHtEvents(instance: HtEvents): void {
  analytics = instance;
}

function requireAnalytics(): HtEvents {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  options: CallOptions | undefined,
  path: readonly string[] | undefined,
  version: string,
  envelopeKey: "properties" | "traits",
): { data: T; options: CallOptions | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, options };
  }
  const [head, ...rest] = path;
  if (head === envelopeKey) {
    return {
      data: setAtPath(data, rest, version) as T,
      options,
    };
  }
  if (head === "context") {
    const contextRoot =
      options?.context !== null &&
      typeof options?.context === "object" &&
      !Array.isArray(options.context)
        ? (options.context as Record<string, unknown>)
        : {};
    return {
      data,
      options: {
        ...options,
        context: setAtPath(contextRoot, rest, version),
      },
    };
  }
  return { data, options };
}

function compactOptions(
  options: CallOptions | undefined,
): CallOptions {
  if (options === undefined) {
    return {};
  }
  const out: CallOptions = {};
  if (options.anonymousId !== undefined) {
    out.anonymousId = options.anonymousId;
  }
  if (options.context !== undefined) {
    out.context = options.context;
  }
  if (options.timestamp !== undefined) {
    out.timestamp = options.timestamp;
  }
  if (options.integrations !== undefined) {
    out.integrations = options.integrations;
  }
  return out;
}

export function trackOrderCompletedDefault(
  userId: string | undefined,
  properties: TrackOrderCompletedDefault,
  options?: CallOptions,
): void {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    ["context", "protocols", "schemaVersion"],
    "default",
    "properties",
  );
  htevents.track({
    event: "Order Completed",
    ...(userId === undefined ? {} : { userId }),
    properties: injected.data,
    ...compactOptions(injected.options),
  } as Parameters<HtEvents['track']>[0]);
}

export const trackOrderCompleted = trackOrderCompletedDefault;
"
`;

exports[`renderNodeTs matches the snapshot for with-refs.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-js-node v1.1.0 or later.
 */

import type { HtEvents, TrackParams } from '@ht-sdks/events-sdk-js-node';

export interface IdentifyDefault {
    email?: string;
    [property: string]: unknown;
}

export interface TrackCartViewedDefault {
    amount:     number;
    currency:   string;
    itemCount?: number;
    [property: string]: unknown;
}

export type CallOptions = {
  anonymousId?: string;
  context?: TrackParams['context'];
  timestamp?: TrackParams['timestamp'];
  integrations?: TrackParams['integrations'];
};

let analytics: HtEvents | undefined;

export function setHtEvents(instance: HtEvents): void {
  analytics = instance;
}

function requireAnalytics(): HtEvents {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  options: CallOptions | undefined,
  path: readonly string[] | undefined,
  version: string,
  envelopeKey: "properties" | "traits",
): { data: T; options: CallOptions | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, options };
  }
  const [head, ...rest] = path;
  if (head === envelopeKey) {
    return {
      data: setAtPath(data, rest, version) as T,
      options,
    };
  }
  if (head === "context") {
    const contextRoot =
      options?.context !== null &&
      typeof options?.context === "object" &&
      !Array.isArray(options.context)
        ? (options.context as Record<string, unknown>)
        : {};
    return {
      data,
      options: {
        ...options,
        context: setAtPath(contextRoot, rest, version),
      },
    };
  }
  return { data, options };
}

function compactOptions(
  options: CallOptions | undefined,
): CallOptions {
  if (options === undefined) {
    return {};
  }
  const out: CallOptions = {};
  if (options.anonymousId !== undefined) {
    out.anonymousId = options.anonymousId;
  }
  if (options.context !== undefined) {
    out.context = options.context;
  }
  if (options.timestamp !== undefined) {
    out.timestamp = options.timestamp;
  }
  if (options.integrations !== undefined) {
    out.integrations = options.integrations;
  }
  return out;
}

export function identifyDefault(
  userId: string | undefined,
  traits?: IdentifyDefault,
  options?: CallOptions,
): void {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    (traits ?? {}) as Record<string, unknown>,
    options,
    undefined,
    "default",
    "traits",
  );
  htevents.identify({
    ...(userId === undefined ? {} : { userId }),
    traits: injected.data,
    ...compactOptions(injected.options),
  } as Parameters<HtEvents['identify']>[0]);
}

export const identify = identifyDefault;

export function trackCartViewedDefault(
  userId: string | undefined,
  properties: TrackCartViewedDefault,
  options?: CallOptions,
): void {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    undefined,
    "default",
    "properties",
  );
  htevents.track({
    event: "Cart Viewed",
    ...(userId === undefined ? {} : { userId }),
    properties: injected.data,
    ...compactOptions(injected.options),
  } as Parameters<HtEvents['track']>[0]);
}

export const trackCartViewed = trackCartViewedDefault;
"
`;
